--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
   "name": "web_project_around",
   "version": "1.0.0",
-  "description": "Nome do projeto: Around the U.S.",
+  "description": "Project US Around",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "dev": "webpack serve"
   },
-  "author": "",
-  "license": "ISC"
+  "keywords": [],
+  "author": "Fabiana Storer",
+  "dependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.5",
+    "postcss-loader": "^8.1.1"
+  }
 }
