--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "web_project_around",
   "version": "1.0.0",
-  "description": "Project US Around",
-  "main": "index.js",
+  "description": "Nome do projeto: Around the U.S.",
+  "main": "./src/page/index.js",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve"
   },
-  "keywords": [],
-  "author": "Fabiana Storer",
-  "dependencies": {
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
     "@babel/preset-env": "^7.25.4",
-    "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
+    "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
+    "cssnano": "^7.0.6",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
-    "webpack": "^5.94.0",
+    "postcss-loader": "^8.1.1",
+    "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.1.0"
   },
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "cssnano": "^7.0.5",
-    "postcss-loader": "^8.1.1"
+  "dependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.38.1"
   }
 }
