--- a/.prettierignore
+++ b/.prettierignore
@@ -1,1 +1,21 @@
-vendor/normalize.css
+# Dependências do Node.js
+node_modules/
+
+# Diretório de build
+dist/
+
+# Arquivos de log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Arquivos de ambiente
+.env
+
+# Sistema operacional específico
+.DS_Store
+Thumbs.db
+
+# IDEs e editores
+.idea/
+.vscode/
