--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
-  "name": "web_project_around",
+  "name": "sprint-11",
   "version": "1.0.0",
-  "description": "Nome do projeto: Around the U.S.",
-  "main": "./src/page/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "dev": "webpack serve --mode development --open"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.25.4",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
     "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.2.1",
-    "css-loader": "^7.1.2",
-    "cssnano": "^7.0.6",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.9.1",
-    "postcss-loader": "^8.1.1",
-    "webpack": "^5.95.0",
+    "babel-loader": "^8.3.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.2.7",
+    "cssnano": "^7.0.4",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^1.6.2",
+    "postcss-loader": "^4.3.0",
+    "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "webpack-dev-server": "^5.0.4"
   },
-  "dependencies": {
-    "clean-webpack-plugin": "^4.0.0",
-    "core-js": "^3.38.1"
-  }
+  "description": ""
 }
